@@ -76,8 +76,10 @@ module.exports = function(opts){
       cenv.validation_data.fonts = available_fonts;
     }
 
-    var redisPool = ( opts.redis && opts.redis.pool ) ?
-      opts.redis.pool : new RedisPool(opts.redis);
+    opts.redis = opts.redis || {};
+    var redisPool = (opts.redis && opts.redis.pool)
+        ? opts.redis.pool
+        : new RedisPool(_.extend(opts.redis, {name: 'windshaft:server'}));
 
     // initialize core mml_store
     var mml_store_opts = { pool: redisPool }; 
