@@ -7,6 +7,7 @@ Version 0.24.0
     - grainstore
     - redis-mpool
     - pg
+ - Specifies name in the redis pool
 
 
 Version 0.23.0
